--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -7,3 +7,4 @@
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
+<h2> this is new Way to doing this </h2>
